Fix button word-wrapping issue

--- a/mediagoblin/static/css/base.css
+++ b/mediagoblin/static/css/base.css
@@ -129,6 +129,7 @@ a.mediagoblin_logo{
   font-style: normal;
   font-weight: bold;
   font-size: 1em;
+  display: inline-block;
 }
 
 .button_action_highlight{
